--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -54,5 +54,5 @@ jobs:
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
       with:
-        config-file: ./.github/workflows/codeql-config.yml
+        config-file: ./codeql-config.yml
 
