--- a/.github/codeql-config.yml
+++ b/.github/codeql-config.yml
@@ -2,6 +2,8 @@ name: "My CodeQL config"
 
 disable-default-queries: true
 
+languages: java
+
 queries:
   - name: Extended Security
     uses: security-extended
