--- a/.github/codeql-config.yml
+++ b/.github/codeql-config.yml
@@ -10,10 +10,4 @@ queries:
   - name: For Quality
     uses: security-and-quality
   - name: codeql repo
-    uses: github/codeql/java/ql@v1.24.0
-
-paths-ignore:
-  - node_modules
-  - '**/*.test.js'
-paths:
-  - src
+    uses: github/codeql/java/ql/src/codeql-suites/java-code-scanning.qls@v1.24.0
