--- a/.github/codeql-config.yml
+++ b/.github/codeql-config.yml
@@ -1,13 +1,11 @@
 name: "My CodeQL config"
 
-disable-default-queries: true
-
 languages: java
 
 queries:
   - name: Extended Security
     uses: security-extended
-  - name: For Quality
+  - name: Security and Quality
     uses: security-and-quality
   - name: codeql repo
     uses: github/codeql/java/ql/src/codeql-suites/java-code-scanning.qls@v1.24.0
